/var/run -> /run

--- a/man/ifupdown-multi-interfaces.5
+++ b/man/ifupdown-multi-interfaces.5
@@ -142,7 +142,7 @@ iface eth1 inet static
 .B \fI/etc/network/interfaces\fP
 System\-wide network interface configuration. See \fBinterfaces\fP(5).
 .TP
-.B \fI/var/run/network/ifupdown\-multi.*\fP
+.B \fI/run/network/ifupdown\-multi.*\fP
 State information used by \fBifupdown\-multi\fP\&.
 .UNINDENT
 .SH SEE ALSO
