--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ ifupdown-multi (1.0.1) UNRELEASED; urgency=medium
 
   * Use secure copyright file specification URI.
   * Update standards version to 4.6.0, no changes needed.
+  * Update standards version to 4.6.2, no changes needed.
 
  -- Debian Janitor <janitor@jelmer.uk>  Sat, 30 Jul 2022 22:28:02 -0000
 
